# algobot-signal-trading

./: .env.example  DATA_FLOW_ANALYSIS.md  PROJECT_ANALYSIS.md  SETUP.md  debug.md  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  remove_comments.py
.run/: Debug Discord with Docker.run.xml  Discord service debug.run.xml  Docker Discord Debug.run.xml  Start Docker Debug.run.xml  Trading service debug.run.xml  compose dev.run.xml  debug-compose.run.xml
app/discord/: Dockerfile  config.py  main.py  requirements-test.txt  requirements.txt
app/trading/: Dockerfile  config.py  main.py  requirements-test.txt  requirements.txt
core/: router_discovery.py
domain/: __init__.py
domain/common/: __init__.py  enums.py
domain/entities/: __init__.py  account_info.py  message.py  message_filter.py  message_group.py  position.py  trade_request.py  trade_response.py  trading_signal.py
script/: debug-recreate-services.sh
shared/: container.py  error_handler.py  exception_handlers.py  service_registry.py
shared/auth/: __init__.py  api_key_handler.py  auth_middleware.py  jwt_handler.py  request_signing.py
shared/database/: __init__.py  mongodb_manager.py
shared/health/: __init__.py  health_checker.py  health_router.py
shared/middleware/: __init__.py  correlation_middleware.py  exception_handlers.py
shared/routers/: __init__.py  base_router.py
shared/services/: __init__.py  base_service.py  exceptions.py
shared/utils/: constants.py  display_formats.py  exceptions.py  retry_helper.py
tests/discord/: __init__.py  (+1 more)
(+35 files in other folders)
